...
        android:textAlignment="center"
        android:textSize="18sp"

        />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="5dp"
        android:text=""
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/viewComments"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="5dp"
        android:textAlignment="center"
...
